--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "three": "^0.173.0",
+    "lil-gui": "^0.20.0",
+    "three": "^0.173.0"
+  },
+  "devDependencies": {
     "vite": "^6.1.1"
   }
 }
